--- a/PowerPointProjectPlannerWebApp/PowerPointProjectPlannerWebApp.csproj
+++ b/PowerPointProjectPlannerWebApp/PowerPointProjectPlannerWebApp.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Syncfusion.Presentation.Net.Core" Version="18.1.0.52" />
+  </ItemGroup>
+
 </Project>
