--- a/PowerPointProjectPlannerWebApp/PowerPointProjectPlannerWebApp.csproj
+++ b/PowerPointProjectPlannerWebApp/PowerPointProjectPlannerWebApp.csproj
@@ -2,9 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Syncfusion.Presentation.Net.Core" Version="18.1.0.52" />
   </ItemGroup>
 
